// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket crypto endpoint should return success 1`] = `
{
  "data": {
    "ask": 3107.1275,
    "bid": 3106.8495,
    "mid": 3106.9885,
    "result": 3106.9885,
  },
  "result": 3106.9885,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1659338094909,
  },
}
`;

exports[`websocket forex endpoint should return success 1`] = `
{
  "data": {
    "result": 0.7819647646677041,
  },
  "result": 0.7819647646677041,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1659338092107,
  },
}
`;
